Add snapshot manager MVP
